# goomba

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
code/: Cargo.toml
code/src/: decode.rs  display.rs  inst.rs  lib.rs
emulator/: Cargo.toml
emulator/src/: bits.rs  cartridge.rs  dma.rs  frame.rs  joypad.rs  lib.rs  state.rs  timer.rs
emulator/src/cpu/: decode.rs  interrupt.rs  mod.rs  state.rs
emulator/src/mmu/: memory.rs  mod.rs
emulator/src/mmu/mapper/: mbc1.rs  mod.rs  rom_only.rs
emulator/src/ppu/: fetcher.rs  mod.rs  state.rs
src/: bits.rs  cartridge.rs  dma.rs  emulator.rs  frame.rs  gui.rs  input.rs  joypad.rs  main.rs  state.rs  timer.rs
src/cpu/: execute.rs  interrupt.rs  mod.rs  state.rs
src/mmu/: bank.rs  memory.rs  mod.rs
src/mmu/mapper/: mbc1.rs  mod.rs  rom_only.rs
src/ppu/: fifo.rs  mod.rs  object.rs  state.rs
web/: Cargo.toml  index.html
web/src/: app.rs  gui.rs  main.rs  web.rs
