[package]
name = "goomba"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[workspace]
members = [
    "code",
    "emulator",
]

[workspace.package]
edition = "2021"
authors = ["jteske@posteo.net"]

[workspace.dependencies]
anyhow = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }

[dependencies]
anyhow.workspace = true
log.workspace = true
argh = "0.1"
env_logger = "0.10"
pixels = "0.11"
rfd = "0.11"
winit = "0.28"
winit_input_helper = "0.14"
emulator = { path = "emulator" }

[profile.release]
panic = "abort"

[profile.dev]
opt-level = 1
panic = "abort"
