[package]
name = "web"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
pixels.workspace = true
winit.workspace = true
console_error_panic_hook = "0.1"
console_log = "1"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
emulator = { path = "../emulator" }

[dependencies.web-sys]
version = "0.3"
features = [
  "File", "FileList", "FileReader",
  "HtmlDivElement", "HtmlInputElement",
]
